--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "2181:2181"
   kafka:
     container_name: local-kafka
+    hostname: kafka-server
     image: bitnami/kafka:2.8.0
     environment:
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
